# MovieGraphBenchmark

./: .gitignore  CHANGELOG.md  NEW_IN_THIS_RELEASE.md  README.md  noxfile.py  pyproject.toml
.github/workflows/: main.yml  publish.yml
data/: imdb_intra_ent_links  multi_source_cluster  tmdb_intra_ent_links  tvdb_intra_ent_links
data/imdb/: allowed  allowedIMDBTVDB  exclude
data/imdb-tmdb/: cluster  ent_links
data/imdb-tmdb/721_5fold/1/: test_links  train_links  valid_links
data/imdb-tmdb/721_5fold/2/: test_links  train_links  valid_links
data/imdb-tmdb/721_5fold/3/: test_links  train_links  valid_links
data/imdb-tmdb/721_5fold/4/: test_links  train_links  valid_links
data/imdb-tmdb/721_5fold/5/: test_links  train_links  valid_links
data/imdb-tvdb/: attr_triples_2  cluster  ent_links  rel_triples_2
data/imdb-tvdb/721_5fold/1/: test_links  train_links  valid_links
data/imdb-tvdb/721_5fold/2/: test_links  train_links  valid_links
data/imdb-tvdb/721_5fold/3/: test_links  train_links  valid_links
data/imdb-tvdb/721_5fold/4/: test_links  train_links  valid_links
data/imdb-tvdb/721_5fold/5/: test_links  train_links  valid_links
data/tmdb-tvdb/: attr_triples_2  cluster  ent_links  rel_triples_2
data/tmdb-tvdb/721_5fold/1/: test_links  train_links  valid_links
data/tmdb-tvdb/721_5fold/2/: test_links  train_links  valid_links
data/tmdb-tvdb/721_5fold/3/: test_links  train_links  valid_links
data/tmdb-tvdb/721_5fold/4/: test_links  train_links  valid_links
data/tmdb-tvdb/721_5fold/5/: test_links  train_links  valid_links
src/: create_graph.py  get_imdb_data.py  main.py
src/moviegraphbenchmark/: __init__.py  create_graph.py  get_imdb_data.py  loading.py  utils.py
tests/: read_allowed.py  test_load.py  test_one_liner.py
tests/resources/: allowed_episode  allowed_film  allowed_name  allowed_show
