[tool.poetry]
name = "ScaDSMovieGraphBenchmark"
version = "1.0.0"
description = "Benchmark datasets for Entity Resolution on Knowledge Graphs containing information about movies, tv shows and persons from IMDB,TMDB and TheTVDB"
authors = ["Daniel Obraczka <obraczka@informatik.uni-leipzig.de>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
requests = "*"
tqdm = {version = "*", optional = true}
pandas = {version = "*", optional = true}

[tool.poetry.extras]
all = ["tqdm", "pandas"]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
